refactor: do refactor with JsonReader class
details:
- read file using Paths instead of class loader
- read bytes from InputStream instead of URI